@@ -1,0 +1,45 @@
+.\" grepmidi -- display structure of MIDI files
+.\" Copyright (c) 2006 Daniel Kobras
+.\"
+.\" This manual page is free software; you can redistribute it and/or modify
+.\" it under the terms of the GNU General Public License as published by
+.\" the Free Software Foundation; either version 2 of the License, or
+.\" (at your option) any later version.
+.\" 
+.\" This program is distributed in the hope that it will be useful,
+.\" but WITHOUT ANY WARRANTY; without even the implied warranty of
+.\" MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+.\" GNU General Public License for more details.
+.\" 
+.\" You should have received a copy of the GNU General Public License
+.\" along with this program; if not, write to the Free Software
+.\" Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301 USA
+.\"
+.\" This manual page was written especially for Debian GNU/Linux.
+.\"
+.TH GREPMIDI 1 "July 2006"
+.SH NAME
+grepmidi \- display structure of MIDI files
+.SH SYNOPSIS
+\fBgrepmidi\fR [ \fI-f\fR ] \fIfile\fR [ \fI...\fR ]
+.SH DESCRIPTION
+The \fBgrepmidi\fR utility provides a simple parser for files in raw MIDI
+format.  It is far from complete, but allows to get a grip of the basic
+song structure in \fIfile\fR.  That is, it does not display single note,
+but only meta information embedded in the MIDI file.  \fBgrepmidi\fR can
+also be useful to check whether a given MIDI file contains errors.
+.PP
+More than one \fIfile\fR can be given on the commandline.  Option \fB-f\fR
+tells \fBgrepmidi\fR to prepend each line of output with the filename that
+is currently checked.
+.PP
+\fBgrepmidi\fR is distributed along with \fBMusE\fR, a full-fledged MIDI
+Music Editor.
+.SH "SEE ALSO"
+.BR ${MusE_EXEC_NAME} (1).
+.SH AUTHORS
+.B grepmidi
+was written by Werner Schweer <ws@seh.de>.
+.PP
+This manual page was written by Daniel Kobras <kobras@debian.org> for the
+Debian GNU/Linux system (but may be used by others).
