@@ -1,0 +1,101 @@
+.\" MusE -- MIDI/Audio Sequencer
+.\" Copyright (c) 2006 Daniel Kobras <kobras@debian.org>
+.\" Copyright (c) 2010 Orcan Ogetbil <oget.fedora@gmail.com>
+.\"
+.\" This manual page is free software; you can redistribute it and/or modify
+.\" it under the terms of the GNU General Public License as published by
+.\" the Free Software Foundation; either version 2 of the License, or
+.\" (at your option) any later version.
+.\" 
+.\" This program is distributed in the hope that it will be useful,
+.\" but WITHOUT ANY WARRANTY; without even the implied warranty of
+.\" MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+.\" GNU General Public License for more details.
+.\" 
+.\" You should have received a copy of the GNU General Public License
+.\" along with this program; if not, write to the Free Software
+.\" Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301 USA
+.\"
+.\" This manual page was written especially for Debian but may be used by
+.\" others of course.
+.\"
+.TH MUSE 1 "December 2010"
+.SH NAME
+MusE \- MIDI/Audio Sequencer
+.SH SYNOPSIS
+.B ${MusE_EXEC_NAME}
+[ \fIoptions\fR ] [ \fIfile\fR ]
+.SH DESCRIPTION
+.B MusE
+is a MIDI/Audio sequencer that can also record and edit sound files, apply
+effects and filters from an intuitive graphical interface.  It is based on
+the Linux-specific ALSA interface for audio i/o.  The Jack Audio Connection
+Kit is used for routing.  LADSPA-compliant plugins allow to extend the
+list of available effects.
+.PP
+The optional
+.I file
+argument denotes a project file in MusE-internal format that is loaded on
+startup.  Project files can also be loaded later on through the graphical menu.
+.SH OPTIONS
+.TP
+.B -a
+Use a dummy audio backend instead of real audio i/o.
+.TP
+.B -d
+Start in debugging mode without real-time threads.
+.TP
+.B -D
+Enable verbose debugging messages.
+.TP
+.B -h
+Display usage information.
+.TP
+.B -I
+Do not attempt to load any DSSI plugins.
+.TP
+.B -l \fIxx\fR
+Force locale to the language/country code xx.
+.TP
+.B -L
+Do not se LASH.
+.TP
+.B -m
+Provide debugging messages about midi input events.
+.TP
+.B -M
+Provide debugging messages about midi output events.
+.TP
+.B -p
+Do not attempt to load any LADSPA plugins.
+.TP
+.B -P \fIn\fR
+Set scheduling priority of real-time threads to \fIn\fR (Dummy only, default 40. Else fixed by Jack.).
+.TP
+.B -s
+Provide debugging messages about sync events.
+.TP
+.B -v
+Print version information.
+.TP
+.B -V
+Do not attempt to load any VST plugins.
+.TP
+.B -y
+Enable Python control support.
+.TP
+.B -Y \fIn\fR
+Force midi real time priority to n.
+.SH "SEE ALSO"
+.B MusE
+provides an integrated help system in the graphical user interface.
+.SH AUTHORS
+.B MusE
+was written by Werner Schweer, Robert Jonnson, Mathias Lundgren,
+Frank Neumann, Joachim Schiele, Tim Donnelly, Nil Geisweiller, 
+Orcan Ogetbil and others.
+.PP
+This manual page was originally written by Daniel Kobras 
+<kobras@debian.org> for the Debian GNU/Linux system
+(but may be used by others). It was updated later by
+Orcan Ogetbil for MusE2.
