@@ -91,6 +91,7 @@ set_target_properties( midiedit
 target_link_libraries ( midiedit
       ${QT_LIBRARIES}
       al
+      ctrl
       icons
       widgets
       ctrl
