@@ -4,6 +4,7 @@ GenericName=Audio/MIDI Sequencer
 Comment=Midi Music Editor
 Icon=muse_icon
 Type=Application
-Exec=muse2
+Exec=${MusE_EXEC_NAME}
 Terminal=false
 Categories=Sequencer;Midi;X-Jack;X-Sequencers;X-MIDI;Audio;AudioVideo;
+MimeType=audio/midi;application/x-muse;application/xml;
